--- a/app/src/main/res/layout/app_main.xml
+++ b/app/src/main/res/layout/app_main.xml
@@ -5,9 +5,7 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="center"
-    android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".ActivityUI.MainActivity">
 
     <!-- Top app bar - Material Design -->
     <com.google.android.material.appbar.AppBarLayout
@@ -93,13 +91,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textField" />
-    <Button
-            android:text="Help?"
-            android:layout_width="330dp"
-            android:layout_height="36dp" android:id="@+id/button_h"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="40dp"
-            android:layout_marginStart="40dp" android:layout_marginEnd="41dp" android:layout_marginRight="41dp"
-            app:layout_constraintEnd_toEndOf="parent"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
