--- a/app/src/main/res/layout-land/content_help.xml
+++ b/app/src/main/res/layout-land/content_help.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="25dp"
-        android:text="@string/text_help"
-        android:textSize="13dp" />
+        android:textSize="13dp"
+        android:text="@string/text_help" />
 
 </androidx.core.widget.NestedScrollView>
